# Z-ARCHIVED-caut-ghc7-sync

./: caut-ghc7-sync.cabal  caut-hs2010-sync.cabal  caut-hs2010-synchronous.cabal  main.hs
Cauterize/Generators/Hs2010/Synchronous/: Common.hs  HSAiFile.hs  HSFile.hs  Special.hs  TestServer.hs  TypeDecl.hs  TypePack.hs  TypeSize.hs
gen-meta/: Main.hs
shared/: lib.cabal
shared/Cauterize/: TestServer.hs
shared/Cauterize/Support/: Hs2010.hs
src/Cauterize/Generators/GHC7/: SynchronousSupport.hs
src/Cauterize/Generators/GHC7/Synchronous/: Common.hs  Functions.hs  HSFile.hs  HSMetaFile.hs  Special.hs  TestServer.hs  TypeDecl.hs  TypePack.hs  TypeSize.hs
src/Cauterize/Generators/Hs2010/Synchronous/: Common.hs  Functions.hs  HSFile.hs  HSMetaFile.hs  TestServer.hs  TypeDecl.hs  TypePack.hs  TypeSize.hs
